# solitonkit

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml  solitonkit.cpp  solitonkit.h
.github/workflows/: package-check.yml  publish-pypi.yml
apps/: export_skyrmion.cpp  relax_skyrmion.cpp
benchmarks/: benchmark_cpp_vs_python.py
docs/: cli.md  index.md  pypi-release.md  python-api.md  quickstart.md  theory.md
examples/: cpp_skyrmion_plot.py  ml_train_charge_predictor.py  relax_skyrmion_cpp.py  test_viz.py
include/solitonkit/core/: Lattice2D.hpp  O3Field.hpp  Vec3.hpp
include/solitonkit/dynamics/: LandauLifshitzDynamics.hpp
include/solitonkit/flows/: BabySkyrmeGradientFlow.hpp  BabySkyrmeOptimizers.hpp  GradientFlow.hpp
include/solitonkit/initializers/: SkyrmionAnsatz.hpp
include/solitonkit/io/: CSVWriter.hpp
include/solitonkit/models/: BabySkyrmeModel.hpp  O3SigmaModel.hpp
include/solitonkit/observables/: GeometricTopologicalCharge.hpp  TopologicalCharge.hpp
notebooks/: 01_solitonkit_demo.ipynb
output/: skyrmion_energy_density.csv  skyrmion_field.csv  skyrmion_topological_density.csv
output/python_cpp_example/: config.json  initial_energy_density.csv  initial_topological_density.csv  relaxed_energy_density.csv  relaxed_energy_density.npy  relaxed_field.csv  relaxed_field.npy  relaxed_topological_density.csv  relaxed_topological_density.npy
output/python_cpp_run/: initial_energy_density.npy  initial_field.npy  initial_topological_density.npy
output/relax_skyrmion_cpp/: flow_records.csv  initial_field.csv  summary.txt
outputs/: benchmark_cpp_vs_python.csv  charge_cnn.pt  skyrmion_dataset.json
outputs/cli_demo/: initial.npz  records.csv  relaxed.npz
python/: bindings.cpp
python/solitonkit/: __init__.py  _core.cp314-win_amd64.pyd  adaptive.py  animation.py  cli.py  core.py  datasets.py  io.py  runner.py  viz.py
python/solitonkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: check_release_version.py  generate_docs_demo.py  plot_skyrmion.py
tests/: test_baby_skyrme.cpp  test_baby_skyrme_optimizers.cpp  test_csv_writer.cpp  test_gradient_flow.cpp  test_landau_lifshitz.cpp  test_lattice2d.cpp  test_o3field.cpp  test_o3sigma.cpp  test_python_io_animation.py  test_skyrmion_ansatz.cpp  test_topological_charge.cpp  test_vec3.cpp
