[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solitonkit"
version = "0.1.0"
description = "Python interface for topological field simulations with a C++ core"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "pillow"
]

[project.scripts]
solitonkit = "solitonkit.cli:main"

[tool.setuptools.packages.find]
where = ["python"]
